# uv-devcontainer

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: playground.ipynb
uv-devcontainer/: hello.py
uv_devcontainer/: hello.py
