[project]
name = "uv_devcontainer"
version = "0.1.0"
description = "uv devcontainer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.1",
    "torch>=2.5.1",
]


[tool.uv]
dev-dependencies = ["pre-commit>=3.8.0", "ruff>=0.6.7", "jupyter>=1.1.1"]


[tool.ruff]
cache-dir = "/home/vscode/.cache/ruff"
